@@ -1,6 +1,6 @@
 function export.GetGlobalInfo()
   return {
-    Version       = { 1, 0, 0, 450 },
+    Version       = { 1, 0, 0, 451 },
     MinFarVersion = { 3, 0, 0, 4130 },
     Guid          = win.Uuid("4EBBEFC8-2084-4B7F-94C0-692CE136894D"),
     Title         = "LuaMacro",
